--- a/.github/workflows/eval-unpacker-ci.yml
+++ b/.github/workflows/eval-unpacker-ci.yml
@@ -1,28 +1,60 @@
 name: eval-unpacker CI
+
 on:
   push:
-    paths: ['tools/eval-unpacker/**']
+    paths:
+      - 'tools/eval-unpacker/**'
   pull_request:
-    paths: ['tools/eval-unpacker/**']
+    paths:
+      - 'tools/eval-unpacker/**'
   workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: ${{ hashFiles('tools/eval-unpacker/pyproject.toml') != '' }}
+
     steps:
       - uses: actions/checkout@v4
+
+      # Extra safety: fail early if pyproject.toml isn't where we expect
+      - name: Ensure pyproject exists
+        run: test -f tools/eval-unpacker/pyproject.toml
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install & test
+
+      - name: Install package (editable) + pytest
         working-directory: tools/eval-unpacker
         run: |
           python -m pip install --upgrade pip
           pip install -e .
           pip install pytest
+
+      - name: Verify import and CLI
+        working-directory: tools/eval-unpacker
+        run: |
+          python -c "import eval_unpacker as m; print('version:', getattr(m,'__version__','n/a'))"
+          python - <<'PY'
+import shutil, sys
+p = shutil.which('eval-unpack')
+print('eval-unpack on PATH:', p)
+sys.exit(0 if p else 1)
+PY
+
+      - name: CLI smoke test
+        working-directory: tools/eval-unpacker
+        run: |
           mkdir -p examples
           echo "eval(function(p,a,c,k,e,d){return p}('abc',10,2,'a|b'))" > examples/sample.js
           eval-unpack examples/sample.js
           python -m eval_unpacker.cli examples/sample.js
-          if [ -d tests ]; then pytest -q; else echo "No tests/; skipping."; fi
+
+      - name: Run pytest if present
+        working-directory: tools/eval-unpacker
+        run: |
+          if [ -d tests ]; then
+            pytest -q
+          else
+            echo "No tests/; skipping."
+          fi
